cabal-version:      2.0
name:               base32-lens
version:            0.1.0.0
synopsis:           Optics for the Base32 library
description:        Prisms and pattern synonyms for the Base32 library
homepage:           https://github.com/emilypi/base32-lens
bug-reports:        https://github.com/emilypi/base32-lens/issues
license:            BSD3
license-file:       LICENSE
author:             Emily Pillmore
maintainer:         emilypi@cohomolo.gy
copyright:          (c) 2020 Emily Pillmore
category:           Data
build-type:         Custom
extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.4

source-repository head
  type:     git
  location: https://github.com/emilypi/base32-lens.git

custom-setup
  setup-depends:
      base           >=4.10 && <5
    , Cabal
    , cabal-doctest

library
  exposed-modules:
    Data.ByteString.Base32.Lens
    Data.ByteString.Lazy.Base32.Lens
    Data.ByteString.Short.Base32.Lens
    Data.Text.Encoding.Base32.Lens
    Data.Text.Lazy.Encoding.Base32.Lens
    Data.Text.Short.Encoding.Base32.Lens

  build-depends:
      base        >=4.10 && <5
    , base32      ^>=0.2
    , bytestring  ^>=0.10
    , lens        >=4.0  && <5
    , text        ^>=1.2
    , text-short  ^>=0.1

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
